[package]
name = "tag-helper"
version = "0.3.0"
description = "Increments semver-compatible git tags"
repository = "https://github.com/panoptix-za/tag-helper"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["git"]
authors = ["Tshepang Lekhonkhobe <tshepang@gmail.com>"]

[dependencies]
git2 = "0.7"
semver = "0.9"
structopt = "0.2"

[badges]
travis-ci = { repository = "panoptix-za/tag-helper" }
