[package]
name = "tag-helper"
version = "0.4.0"
description = "Increments semver-compatible git tags"
repository = "https://github.com/tshepang/tag-helper"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["git"]
authors = ["Tshepang Lekhonkhobe <tshepang@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
git2 = "0.13"
semver = "1"
structopt = "0.3"
